--- a/css/styles.css
+++ b/css/styles.css
@@ -728,11 +728,16 @@ overflow: hidden;
     margin-bottom:12px;
 }
 .input{
-  position: relative;
     display: flex;
     flex-direction: column;
-    margin-bottom: 10px;
+    
 }
+.input-svg{
+ position: relative;
+  display: flex;
+    flex-direction: column;
+    }
+
 .flabel{
   font-size: 12px;
     line-height: 1.16;
@@ -740,6 +745,7 @@ overflow: hidden;
     color: var(--description-about-color);
 }
 .form-input{
+  font-size: 12px;
   width: 448px;
     height: 40px;
     margin: 0;
@@ -749,8 +755,8 @@ overflow: hidden;
     border-radius: 4px;
     box-sizing: border-box;
     outline: none;
-  
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin-bottom: 10px;
 }
 .form-input:hover+.form-svg,
 .form-input:focus+.form-svg {
@@ -760,12 +766,13 @@ overflow: hidden;
 .form-input:focus {
   border-color:var(--hover-logo-buttonfont-color);
 }
-.input .form-svg{
+.input-svg .form-svg{
    position: absolute;
-    top: 50%;
+    top: 10px;
     left: 10px;
-}
+    }
 .comments{
+  font-size: 12px;
   width: 448px;
     height: 120px;
     padding: 12px 16px;
@@ -775,7 +782,7 @@ overflow: hidden;
     box-sizing: border-box;
     resize: none;
     outline: none;
-  
+   
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .comments::placeholder{
